# agent-sync

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-title.yml  release.yml
examples/: CLAUDE.md  settings.json  settings.skill-path.json  workflow.md
scripts/: dev-smoke-test.py  install-local.py
skills/agent-sync/: SKILL.md
skills/agent-sync/scripts/: agent-sync  install.py
src/agent_sync/: __init__.py  __main__.py  cli.py  console.py  db.py  errors.py  git_utils.py  hooks.py  locks.py  messages.py  models.py  paths.py  render.py  tasks.py
tests/: conftest.py  test_append.py  test_benchmark_comparison.py  test_cli_json.py  test_cli_status.py  test_console.py  test_db.py  test_hooks_post_edit.py  test_hooks_pre_edit.py  test_hooks_session_start.py  test_hooks_stop.py  test_hooks_user_prompt_submit.py  test_locks.py  test_messages.py  test_paths.py  test_render.py  test_tasks.py
