[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# The GitHub repo, CLI command, and skill are all `agent-sync`, but that name is
# taken on PyPI by an unrelated project, so the distribution publishes as
# `claude-agent-sync` (trusted publishing is configured for it; see CONTRIBUTING.md).
name = "claude-agent-sync"
version = "0.4.0"
description = "Coordinate multiple AI coding-agent sessions in one repo: file locks, task board, presence, and messaging over shared SQLite. Claude Code skill + hooks included."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "agent-sync contributors" }]
keywords = [
    "claude", "claude-code", "ai-agents", "agents", "multi-agent", "agentic",
    "coordination", "file-locking", "concurrency", "cli", "sqlite", "hooks",
    "cursor", "codex", "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]
# Runtime depends on the Python standard library only.
dependencies = []

[project.urls]
Homepage = "https://github.com/denfry/agent-sync"
Repository = "https://github.com/denfry/agent-sync"
Documentation = "https://github.com/denfry/agent-sync#readme"
Issues = "https://github.com/denfry/agent-sync/issues"
Changelog = "https://github.com/denfry/agent-sync/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# The core CLI and hooks are standard-library-only. The live operator console
# (`agent-sync console`) is the one feature that needs a richer terminal stack;
# it lives behind this extra so installing the package stays dependency-free.
tui = ["prompt_toolkit>=3.0"]
dev = ["pytest>=7.0", "ruff>=0.8", "prompt_toolkit>=3.0"]

[project.scripts]
agent-sync = "agent_sync.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"
# Make the package importable from a source checkout without an editable install
# so a bare `pytest -q` works from the repo root.
pythonpath = ["src"]
filterwarnings = ["error::DeprecationWarning:agent_sync.*"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# Release automation (Python Semantic Release).
# Versions and the changelog are derived from Conventional Commit messages on
# `main`; maintainers never bump the version by hand. See CONTRIBUTING.md.
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/agent_sync/__init__.py:__version__"]
build_command = "python -m pip install build && python -m build"
commit_message = "chore(release): v{version} [skip ci]"
tag_format = "v{version}"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"

[tool.semantic_release.branches.main]
match = "main"
